--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
     
     <!-- READ_PHONE_STATE: For detecting call state (restricted on Android 10+) -->
     <!-- Note: This permission is heavily restricted post-Android 10 -->
-    <!-- Apps need to be default dialer or have special permission -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    
+    <!-- PROCESS_OUTGOING_CALLS: For detecting outgoing calls -->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     
     <!-- FOREGROUND_SERVICE: For running recording service in foreground -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -23,7 +25,7 @@
     
     <!-- Required for Android 10+ to access phone state -->
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -32,7 +34,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CallSpy"
         tools:targetApi="31">
-        
+
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
@@ -43,14 +45,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
+        <!-- Settings Activity -->
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:label="Settings"
+            android:theme="@style/Theme.CallSpy" />
+
         <!-- Call Recording Service -->
         <service
             android:name=".service.CallRecordingService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="microphone" />
-        
+
         <!-- Phone State Receiver for detecting call events -->
         <receiver
             android:name=".receiver.PhoneStateReceiver"
@@ -60,7 +69,7 @@
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
-        
+
         <!-- Accessibility Service for WhatsApp/VoIP call detection -->
         <service
             android:name=".service.CallAccessibilityService"
@@ -73,7 +82,7 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-        
+
     </application>
 
 </manifest>
